--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.show-sql = true
 spring.h2.console.enabled=true
 
 spring.h2.console.path=/h2-console
+
+# Configurar o flyway
+spring.flyway.enable=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
